# svalbard

./: AUTHORS.md  BUILD.bazel  README.md  WORKSPACE
client/java/: BUILD.bazel
client/java/src/main/java/com/google/security/svalbard/client/: BUILD.bazel  SecondaryChannel.java  ServerShareManager.java  ShareManager.java  SharingManager.java  SvalbardClient.java
client/java/src/main/java/com/google/security/svalbard/crypto/: BUILD.bazel  Gf2to64.java  ShamirSecretSharing.java
client/java/src/test/java/com/google/security/svalbard/client/: FakePrintedShareManager.java  FileSecondaryChannel.java  ServerShareManagerCli.java  SharingManagerTest.java  SvalbardClientCli.java
client/java/src/test/java/com/google/security/svalbard/crypto/: Gf2to64Test.java  ShamirSecretSharingTest.java
client/proto/: BUILD.bazel  svalbard.proto
client/testing/: BUILD.bazel  server_share_manager_test.sh  sharing_test.sh  test_truststore.jks  test_util.sh
docs/: CLIENT.md  SECURITY.md  SERVER.md
server/go/: BUILD.bazel  bolt_share_store.go  bolt_share_store_test.go  file_channel.go  file_channel_test.go  inmemory_share_store.go  inmemory_share_store_test.go  server.go  server_test.sh  shareid.go  shareid_test.go  svalbard_server.go  svalbard_server_test.go  testing_tools.go  token_store.go  token_store_test.go  util.go  util_test.go
server/testdata/: BUILD.bazel  test_server_certificate.crt  test_server_key.pem
tools/: gen_java_test_rules.bzl
